correção botão "lembrar"

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </div>
                         <button>Entrar</button>
                         <div class="registrar">
-                            <p>Não tem uma conta? <a href="#">Registrar</a></p>
+                            <p>Não tem uma conta? <a href="#" target="_blank">Registrar</a></p>
                         </div>
                     </form>
                 </div>
